Handle error cases of sub-jobs

Spotted by Frank Fischer

BUG: 374904